remove / from added paths